syntax = "proto3";

option csharp_namespace = "GrpcRequest";

package RequestApi;

service Request {
	rpc CreateRequestEvent(RequestEventResponse) returns (RequestEventResponse) {}
	rpc UpdateRequestEvent(UpdateRequestEventRequest) returns (RequestEventResponse) {}
	rpc GetRequestEventsByOrganiserId (RequestEventsByOrganiserId) returns (PaginatedRequestEventsResponse) {}
}

message RequestEventsByOrganiserId {
	string organiserId = 1;
	int32 pageSize = 2;
	int32 pageIndex = 3;
}

message RequestEventResponse {
	string id = 1;
	string senderid = 2;
	string receiverid = 3;
	string eventid = 4;
	enum Status {
    PENDING = 0;
    ACCEPTED = 1;
    DECLINED = 2;
  }
  Status status = 5;
}

message PaginatedRequestEventsResponse {
	int32 pageIndex = 1;
	int32 pageSize = 2;
	int64 count = 3;
	repeated RequestEventResponse data = 4;
}

message UpdateRequestEventRequest {
	string id = 1;
	enum Status {
    PENDING = 0;
    ACCEPTED = 1;
    DECLINED = 2;
  }
  Status status = 2;
}